# httprc

./: README.md
ca/: .gitignore  Makefile  README.md  ca.cfg  client.cfg  server.cfg
client/: .gitignore  LICENSE  README.md  configure.ac
client/src/: Makefile.am  command.c  command.h  log.h  main.c  main.h  response_buf.c  response_buf.h  result.c  result.h
server/: .main.go.swp  README.md  adminserver.go  clientserver.go  main.go  util.go
server/static/: app.js  device.partial.html  index.html  list.partial.html  rconfig.js
